Added Changed to parsing in YAML + Code Clean up + Restructuring + reverifying